Fixed Safari Spacing

--- a/src/components/DiscoverSection/stylesheets/GridView.scss
+++ b/src/components/DiscoverSection/stylesheets/GridView.scss
@@ -223,7 +223,7 @@
                   }
               }
               .song-info {
-                  width: calc(100% - 40px);
+                  width: calc(100% - 45px);
                   text-align: left;
                   display: inline-block;
                   vertical-align: top;
